Ajout de la récupération des quelques fichiers de configuration

--- a/_posts/2015-02-17-raspbian.md
+++ b/_posts/2015-02-17-raspbian.md
@@ -50,4 +50,11 @@ On peut installer quelques logiciels d'utilités publiques&nbsp;:
 
 	apt-get install vim
 
+Vous pouvez éventuellement récupérer vos différents fichiers de configuration depuis la machine locale&nbsp;:
+
+	scp ~/.bash_aliases ~/.bashrc .ssh/id_rsa.pub ~/.vimrc username@adresse_ip:/home/username
+	ssh username@adresse_ip
+	cat id_rsa.pub >> .ssh/authorized_keys && rm id_rsa.pub
+
+
 Votre Raspberry Pi est maintenant près à accueillir les services que vous souhaitez&nbsp;!
