Ajout de la source

--- a/_posts/2014-11-14-nginx.md
+++ b/_posts/2014-11-14-nginx.md
@@ -3,7 +3,9 @@ title: Installation de Nginx + FastCGI sur Raspbian
 layout: post
 ---
 
-Le serveur Nginx est bien plus léger que le célèbre Apache et est donc parfaitement adapté à un serveur léger tel que le Raspberry Pi
+Le serveur Nginx est bien plus léger que le célèbre Apache et est donc parfaitement adapté à un serveur léger tel que le Raspberry Pi.
+
+Nous avons suivi les instructions fournis dans la [documentation d'Owncloud](http://doc.owncloud.org/server/8.0/admin_manual/installation/nginx_configuration.html) et sur le blog d'[Efstathios Iosifidis](http://eiosifidis.blogspot.fr/2014/06/owncloud-on-raspberry-pi-moebious-nginx.html).
 
 # Installation de Nginx
 
