--- a/_posts/2015-02-17-raspbian.md
+++ b/_posts/2015-02-17-raspbian.md
@@ -8,7 +8,7 @@ Raspbian est une distribution basée sur Debian compatible avec le Raspberry PI.
 Télécharger la [dernière version de l'image](http://downloads.raspberrypi.org/raspbian_latest.torrent) de Raspbian. Pour en copier le contenu sur la carte SD, il est important de d'abord connaitre son device dans `/dev`, par exemple grâce à la commande `dmesg`. Dans mon cas il s'agit de `/dev/mmcblk0`. La commande pour la copie du contenu du fichier est&nbsp;:
 
 
-	sudo dd bs=4M if=raspbian.img of=/dev/mmcblk0
+	> dd bs=4M if=raspbian.img of=/dev/mmcblk0
 
 Cette commande peut prendre beaucoup de temps. Patience&nbsp;!
 
@@ -20,23 +20,23 @@ La première mesure de sécurité est de définir un mot de passe root avec la c
 
 Je vous conseille ensuite de créer un nouvel utilisateur et de supprimer l'utilisateur existant par défaut `pi`. Pour cela, utiliser les deux commandes suivantes&nbsp;:
 
-	adduser username
-	deluser pi
-	rm -fr /home/pi/
+	> adduser username
+	> deluser pi
+	> rm -fr /home/pi/
 
 Vous pouvez également supprimer quelques utilisateurs et groupes inutiles&nbsp;:
 
-	for u in games lp; do deluser $u; done
-	for g in fax voice cdrom floppy tape lpadmin indiecity; do delgroup $g; done
+	> for u in games lp; do deluser $u; done
+	> for g in fax voice cdrom floppy tape lpadmin indiecity; do delgroup $g; done
 
 # Configuration de base
 
 En tant que super-utilisateur, commencer par configurer le Raspberry avec la commande `raspi-config`. Puis une petite mise à jour est de mise&nbsp;:
 
-	apt-get update
-	apt-get dist-upgrade
-	rpi-update
-	reboot
+	> apt-get update
+	> apt-get dist-upgrade
+	> rpi-update
+	> reboot
 
 Si vous souhaitez que votre utilisateur puisse utiliser la commande sudo, taper la commande `visudo` et remplacez la ligne 
 	
@@ -48,13 +48,22 @@ par
 
 On peut installer quelques logiciels d'utilités publiques&nbsp;:
 
-	apt-get install vim
+	> apt-get install vim htop tmux command-not-found
 
 Vous pouvez éventuellement récupérer vos différents fichiers de configuration depuis la machine locale&nbsp;:
 
-	scp ~/.bash_aliases ~/.bashrc .ssh/id_rsa.pub ~/.vimrc username@adresse_ip:/home/username
-	ssh username@adresse_ip
-	cat id_rsa.pub >> .ssh/authorized_keys && rm id_rsa.pub
+	> scp ~/.bash_aliases ~/.bashrc .ssh/id_rsa.pub ~/.vimrc ~/.tmux.conf username@adresse_ip:/home/username
+	> ssh username@adresse_ip
+	> cat id_rsa.pub >> .ssh/authorized_keys && rm id_rsa.pub
 
+Mettre à jour le cache de la commande `command-not-found`&nbsp;:
+
+	> update-command-not-found
+
+Et enfin, je vous recommande d'augmenter un peu le swap&nbsp;:
+
+	> vi /etc/dphys-swapfile
+	> dphys-swapfile setup
+	> dphys-swapfile swapon
 
 Votre Raspberry Pi est maintenant près à accueillir les services que vous souhaitez&nbsp;!
