Update MariaDB installation instruction

--- a/_posts/2014-11-14-mariadb.md
+++ b/_posts/2014-11-14-mariadb.md
@@ -26,9 +26,11 @@ You can now safely delete MySQL:
 The second line backup the MySQL configuration file. It was useless in my case
 but you may have done something smart in it.
 
-A few packages required for your Raspbian:
+A few packages required to compile MariaDB:
 
-	> apt-get install cmake libncurses5-dev bison
+	> apt-get -y install cmake libncurses5-dev libssl-dev bison
+
+	<!-- > apt-get build-dep mysql-server -->
 
 # Install MariaDB
 
@@ -42,17 +44,33 @@ code](https://downloads.mariadb.org/) from the official website. Be careful
 when you select the MariaDB version to chose one compatible with your previous
 MySQL. You can download it using the `wget` command:
 
-	wget "https://downloads.mariadb.org/f/mariadb-10.0.14/source/mariadb-10.0.14.tar.gz/from/http%3A/nwps.ws/pub/mariadb?serve"
+	wget "https://downloads.mariadb.org/interstitial/mariadb-10.0.16/source/mariadb-10.0.16.tar.gz/from/http%3A/nwps.ws/pub/mariadb?serve?&serve" --output-document=mariadb-server.tgz
 
-You now have in your current directory a `mariadb?serve` file hiding a `tar.gz`
-archive. Extract, configure and compile the sources. Note that these steps can
-take some time (many hours):
+You now have in your current directory a `mariadb-server.tgz` archive. Before
+compiling the sources, my swap fil was to small (only 100MB) so I had to
+increase it using the following commands:
 
-	> tar -xvf mariadb\?serve
-	> cd mariadb-10.0.14/BUILD
+	> vi /etc/dphys-swapfile
+	> dphys-swapfile setup
+	> dphys-swapfile swapon
+
+Extract, configure and compile the sources. Note that these steps can take some
+time (many hours):
+
+	> tar -xvf mariadb-server.tgz
+	> cd mariadb-10.0.16/BUILD
 	> ./autorun.sh
 	> cd .. 
 	> ./configure
+
+Since MariaDB 10.0.15, the Mroonga storage engine is compiled by default.
+However it does not work on ARM architecture. Hence, it is mandatory to disable
+it with:
+
+	> cmake . -DWITHOUT_MROONGA=ON
+
+And now the compilation will work:
+
 	> make
 	> make install
 
@@ -60,6 +78,7 @@ MariaDB is now installed in `/usr/local/mysql` (Yes it is `mysql`! Not a typo). 
 can configure the database:
 
 	> cd /usr/local/mysql
+	> adduser --home /nonexistent --no-create-home --shell /bin/false --disabled-login --gecos "MySQL Server,,," mysql
 	> chown -R mysql:mysql .
 	> ./scripts/mysql_install_db --user=mysql
 	> chown -R root .
@@ -80,6 +99,7 @@ database:
 	> ./mysql -u root -p
 	Maria DB> SET PASSWORD FOR 'root'@'localhost' = PASSWORD('newpwd');
 	Maria DB> SET PASSWORD FOR 'root'@'127.0.0.1' = PASSWORD('newpwd');
+	Maria DB> SET PASSWORD FOR 'root'@'::1' = PASSWORD('newpwd');
 	Maria DB> SET PASSWORD FOR 'root'@'raspberrypi' = PASSWORD('newpwd');
 	Maria DB> DROP DATABASE test;
 
@@ -87,6 +107,7 @@ Now delete all the anonymous accounts. You can get the useful lines with the
 following request:
 
 	Maria DB> SELECT User, Host, Password FROM mysql.user;
+	Maria DB> DELETE FROM mysql.user WHERE User!="root" AND (Host="localhost" OR Host="raspberrypi-owncloud");
 
 You should have the following content after deleting the useless users:
 
@@ -101,7 +122,7 @@ You should have the following content after deleting the useless users:
 
 Now all the root users have a not empty password.
 
-Restore all your data:
+Or you can restore all your data:
 
 	> cd
 	> /usr/local/mysql/bin/mysql -u root -p < backup-databases.sql
