Update Nginx installation instruction Format + allow_url_fopen configuration

--- a/_posts/2014-11-14-nginx.md
+++ b/_posts/2014-11-14-nginx.md
@@ -11,20 +11,20 @@ Nous avons suivi les instructions fournis dans la [documentation d'Owncloud](htt
 
 Installez tout d'abord les paquets nécessaires au serveur web ainsi qu'à PHP&nbsp;:
 
-	apt-get -y install nginx php5-fpm php-apc
+	> apt-get -y install nginx php5-fpm php-apc
 
 Puis créez le groupe et l'utilisateur pour le serveur web d'identifiant 10000 et de nom `webserver`&nbsp;:
 
-	addgroup --gid 10000 webserver
-	adduser --home /home/webserver --shell /dev/null --uid 10000 --gid 10000 --disabled-password --disabled-login --gecos '' webserver
-	mkdir -p /home/webserver/{logs/php,www,tmp,sessions}
-	chown -R webserver:webserver /home/webserver/
+	> addgroup --gid 10000 webserver
+	> adduser --home /home/webserver --shell /dev/null --uid 10000 --gid 10000 --disabled-password --disabled-login --gecos '' webserver
+	> mkdir -p /home/webserver/{logs/php,www,tmp,sessions}
+	> chown -R webserver:webserver /home/webserver/
 
 # Configuration de FPM
 
 Configurons maintenant FPM (FastCGI Process Manager).
 
-	cp /etc/php5/fpm/pool.d/www.conf /etc/php5/fpm/pool.d/webserver.conf
+	> cp /etc/php5/fpm/pool.d/www.conf /etc/php5/fpm/pool.d/webserver.conf
 
 Quelques lignes à modifier dans ce fichier&nbsp;:
 
@@ -50,39 +50,39 @@ Quelques lignes à modifier dans ce fichier&nbsp;:
 	php_admin_value[memory_limit] = 128M
 	php_admin_value[post_max_size] = 18M 
 	php_admin_value[max_execution_time] = 240 
-	php_admin_value[allow_url_fopen] = Off 
+	php_admin_value[allow_url_fopen] = On 
 	php_admin_value[upload_max_filesize] = 18M 
 	php_admin_value[date.timezone] = Europe/Paris
 
 Vous pouvez à ce moment démarrer le serveur web&nbsp;:
 
-	service nginx restart && service php5-fpm restart
+	> service nginx restart && service php5-fpm restart
 
 et tester sa connectivité dans un navigateur web. Si tout se passe bien, nous pouvons poursuivre&nbsp;:
 
-	service nginx stop && service php5-fpm stop
+	> service nginx stop && service php5-fpm stop
 
 # Configuration de Nginx
 
 Supprimons tout d'abord le vhost par défaut&nbsp;:
 
-	unlink /etc/nginx/sites-enabled/default
+	> unlink /etc/nginx/sites-enabled/default
 
 Puis créons une nouvelle configuration dans le fichier `/etc/nginx/sites-available/webserver.conf` disponible [ici](/files/webserver.conf).
 
 Nous souhaitons servir notre serveur owncloud en HTTPS ce qui nécessite la création de certificat. Nous allons créer ici des certificats auto-signés&nbsp;:
 
-	mkdir -p /etc/ssl/localcerts
-	openssl req -new -x509 -days 365 -nodes -out /etc/ssl/localcerts/webserver.crt -keyout /etc/ssl/localcerts/webserver.key
-	chmod 600 /etc/ssl/localcerts/webserver.*
+	> mkdir -p /etc/ssl/localcerts
+	> openssl req -new -x509 -days 365 -nodes -out /etc/ssl/localcerts/webserver.crt -keyout /etc/ssl/localcerts/webserver.key
+	> chmod 600 /etc/ssl/localcerts/webserver.*
 
 Afin de tester notre installation, nous pouvons créer une page d'accueil de base dans `/home/webserver/www/index.html`.
 
 Enfin, créons un lien symbolique pour rendre le site accessible&nbsp;:
 
-	ln -s /etc/nginx/sites-available/webserver.conf /etc/nginx/sites-enabled/
+	> ln -s /etc/nginx/sites-available/webserver.conf /etc/nginx/sites-enabled/
 
 puis démarrons le serveur&nbsp;:
 
-	service nginx restart && service php5-fpm restart
+	> service nginx restart && service php5-fpm restart
 
