Start MariaDB at boot time

--- a/_posts/2014-11-14-mariadb.md
+++ b/_posts/2014-11-14-mariadb.md
@@ -131,6 +131,10 @@ Or you can restore all your data:
 
 /!\ Careful! The third line is the source of potential [problems](#pb2)
 
+You can now configure it to start at boot time:
+
+	> update-rc.d mysqld defaults
+
 Last, ensure that your PHP installation have the MySQL driver installed:
 
 	> apt-get install php5-mysql
