--- a/_posts/2015-02-17-raspbian.md
+++ b/_posts/2015-02-17-raspbian.md
@@ -48,7 +48,7 @@ par
 
 On peut installer quelques logiciels d'utilités publiques&nbsp;:
 
-	> apt-get install vim htop tmux command-not-found
+	> apt-get install vim htop tmux command-not-found ntfs-3g
 
 Vous pouvez éventuellement récupérer vos différents fichiers de configuration depuis la machine locale&nbsp;:
 
