--- a/_posts/2015-02-18-owncloud.md
+++ b/_posts/2015-02-18-owncloud.md
@@ -66,6 +66,6 @@ l'entrée qui va bien dans le fichier fstab&nbsp;:
 Puis mettre le script de [backup](/files/owncloud-backup.sh) dans
 `/usr/local/bin/` et éditez votre crontab&nbsp;:
 
-	> crontab -e
+	> crontab -u webserver -e
 	0 4 */2 * * /usr/local/bin/owncloud-backup.sh >> /var/log/owncloud-backup.log 2>&1
 
