Must install php5-cli for owncloud cron task

--- a/_posts/2015-02-18-owncloud.md
+++ b/_posts/2015-02-18-owncloud.md
@@ -18,7 +18,7 @@ cas).
 
 Installer quelques paquets nécessaire à Owncloud&nbsp;:
 
-	> apt-get install php5-gd php5-json php5-mysql php5-curl php5-intl php5-mcrypt php5-imagick
+	> apt-get install php5-gd php5-json php5-mysql php5-curl php5-intl php5-mcrypt php5-imagick php5-cli
 
 À la première connexion à la page d'accueil d'Owncloud, compléter les
 informations. En mettant l'utilisateur de BDD `root`, l'installeur créera un
