--- a/_posts/2014-11-14-mariadb.md
+++ b/_posts/2014-11-14-mariadb.md
@@ -107,7 +107,7 @@ Now delete all the anonymous accounts. You can get the useful lines with the
 following request:
 
 	Maria DB> SELECT User, Host, Password FROM mysql.user;
-	Maria DB> DELETE FROM mysql.user WHERE User!="root" AND (Host="localhost" OR Host="raspberrypi-owncloud");
+	Maria DB> DELETE FROM mysql.user WHERE User!="root" AND (Host="localhost" OR Host="raspberrypi");
 
 You should have the following content after deleting the useless users:
 
