Improve Nginx conf

--- a/_posts/2014-11-14-nginx.md
+++ b/_posts/2014-11-14-nginx.md
@@ -39,6 +39,8 @@ Quelques lignes à modifier dans ce fichier&nbsp;:
 	listen.group = webserver
 	listen.mode = 0660
 	...
+	clear_env = no
+	...
 	php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
 	php_flag[display_errors] = off 
 	php_admin_value[error_log] = /home/webserver/logs/php/fpm-php.www.log
