Set always_populate_raw_post_data in php.ini to -1

--- a/_posts/2014-11-14-nginx.md
+++ b/_posts/2014-11-14-nginx.md
@@ -55,6 +55,7 @@ Quelques lignes à modifier dans ce fichier&nbsp;:
 	php_admin_value[allow_url_fopen] = On 
 	php_admin_value[upload_max_filesize] = 18M 
 	php_admin_value[date.timezone] = Europe/Paris
+	php_admin_value[always_populate_raw_post_data] = -1
 
 Vous pouvez à ce moment démarrer le serveur web&nbsp;:
 
