--- a/_posts/2015-02-17-raspbian.md
+++ b/_posts/2015-02-17-raspbian.md
@@ -46,6 +46,12 @@ par
 
 	username ALL=(ALL) ALL
 
+On peut ensuite gagner 1 Go en supprimant des logiciels inutiles&nbsp;:
+
+	> apt-get purge wolfram-engine minecraft-pi sonic-pi libreoffice*
+	> apt-get clean
+	> apt-get autoremove
+
 On peut installer quelques logiciels d'utilités publiques&nbsp;:
 
 	> apt-get install vim htop tmux command-not-found ntfs-3g
